# bayesian_interface

./: .gitignore  requirements.txt  setup.cfg
src/bayesian_interface/: logger.py  misc_calc.py  parallel.py  sampler_base.py
src/bayesian_interface/data_structure/: __init__.py  autocorr.py  builder.py  chain.py  const.py  convergence.py  dask_misc.py  ess.py  hdf5.py  memory.py  misc.py  netcdf.py  structure_parts.py
src/bayesian_interface/mcmc/: cfg.py  chain_manager.py  data.yml  emcee_ensemble.py  main.py  main_loop.py  main_mpl.py  main_mpl_loop.py  main_mpl_loop_bak.py  mcmc_base.py  zeus_ensemble.py
src/bayesian_interface/mcmc/autocorr/: __init__.py  autocorr.py  autocorrtime.py  ensemble.py  misc.py  normal.py
src/bayesian_interface/mcmc/convergence/: __init__.py  _gr_impl.py  const.py  convergence.py  ess_bulk.py  ess_iat.py  gr.py  gr_rank.py  manual.py  max_archange.py  min_afactor.py  misc.py  pre_process.py  stable_gr.py  stable_gr_det.py  stable_gr_max_eigen.py
src/bayesian_interface/mcmc/ess/: __init__.py  bulk.py  convert.py  ess.py  misc.py
src/bayesian_interface/mcmc/mcmc/: __init__.py  const.py  emcee_sampler.py  manager.py  mcmc.py  sample_adaptive_sampler.py  zeus_sampler.py
src/bayesian_interface/nested/: dynesty_sampler.py  nested_base.py
test/benchmark/mcmc/: check_autocorr.py
test/scratch/scripts/: test_dask.py
test/unittest/data_structure/: test_builder.py  test_chain.py  test_hdf5.py  test_xarray.py
test/unittest/mcmc/: test_autocorr.py  test_cfg.py  test_emcee_ensemble.py  test_gr.py  test_zeus_ensemble.py
(+12 files in other folders)
