[metadata]
name = bayesian_interface
version = 0.0.1
license = MIT license; license.txt

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
# # optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# # 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# # https://setuptools.readthedocs.io/en/latest/setuptools.html#options
# # [options]
# # install_requires =
# #     numpy
# #
# # [options.entry_points]
# # console_scripts =
# #     preprocess = mc2fit.exe_scripts.preprocess:main
# #     prefit = mc2fit.exe_scripts.prefit:main
# #     initialize_cfg = mc2fit.exe_scripts.initialize_cfg:main
# #     MC2_sampling = mc2fit.exe_scripts.mcvp:main
# #     MC2_sampling_loop = mc2fit.exe_scripts.mcvp_loop:main
# #     chk_convergence = mc2fit.exe_scripts.check_convergence:main
# #     chk_samplesize  = mc2fit.exe_scripts.check_sampsize:main
# #     make_results = mc2fit.exe_scripts.make_out:main
